# Project-1

./: .gitignore  Cargo.toml  LICENSE  Project _ Bitcoin Explorer.docx  Project _ Bitcoin Explorer_ Part 1.docx  README.md  docker-compose.yml  main.rs
.github/workflows/: main.yml
backend/: Dockerfile  index.js  package-lock.json  package.json  server.js  tsconfig.json
backend/src/: index.ts
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js  App.tsx  index.js
frontend/src/components/: BitcoinCharts.js
rust_extractor/: Cargo.toml  Cargo.toml.save  Dockerfile
rust_extractor/src/: main.rs  main.rs.save
src/: main.rs
