[package]
name = "rust_extractor"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "rust_extractor"
path = "src/main.rs"
[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }


